--- a/nn_new.ipynb
+++ b/nn_new.ipynb
@@ -793,6 +793,15 @@
     "indices[0], indices[1] = train_test_split(all_indices, test_size=split_ratio[\"val\"], shuffle=True, random_state=random_seed)\n",
     "\n",
     "\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "all_indices = list(range(dataset.get_length()))\n",
+    "remaining_indices, test_indices = train_test_split(all_indices, test_size=parameter_option[\"split\"][\"test\"], shuffle=True, random_state=random_seed)\n",
+    "\n",
+    "print(\"size of test set :{}\".format(int(parameter_option[\"split\"][\"test\"]*dataset.get_length())))\n",
+    "print(\"size of train set :{}\".format(int(parameter_option[\"split\"][\"train\"]*dataset.get_length())))\n",
+    "print(\"one batch with size:{}\".format(int(parameter_option[\"split\"][\"train\"]*dataset.get_length())%parameter_option[\"batch_size\"]))\n",
     "\"\"\""
    ]
   },
